# aeonprotocol.com

./: .gitignore  Aeon prompt vaults  CODE_AUDIT_REPORT.md  README.md  desktop.ini  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: api-ci.yml  ci-cd.yml  patch-note.txt  web-ci.yml
aeon-protocol/: .editorconfig  .gitignore  .npmrc  LICENSE  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
aeon-protocol/backend-api/: .env.example  gunicorn.conf.py  pyproject.toml
aeon-protocol/backend-api/aeon/: __init__.py  config.py  exceptions.py  main.py
aeon-protocol/backend-api/aeon/api/: app.py
aeon-protocol/backend-api/aeon/core/: config.py  logging.py
aeon-protocol/backend-api/aeon/middleware/: __init__.py  auth.py  logging.py  metrics.py  request_id.py
aeon-protocol/backend-api/aeon/pipeline/: __init__.py  scene_writer.py
aeon-protocol/backend-api/aeon/providers/: __init__.py  base.py  elevenlabs.py  openai_images.py  registry.py  replicate.py
aeon-protocol/backend-api/aeon/providers/base/: __init__.py  interfaces.py
aeon-protocol/backend-api/aeon/providers/elevenlabs/: __init__.py  client.py
aeon-protocol/backend-api/aeon/providers/openai/: __init__.py  client.py
aeon-protocol/backend-api/aeon/providers/replicate/: __init__.py  client.py
aeon-protocol/backend-api/aeon/routers/: __init__.py  auth.py  billing.py  crm.py  health.py  jobs.py  media_image.py  media_music.py  media_video.py  webhooks.py
aeon-protocol/backend-api/aeon/services/: credits.py  jobs.py  ratelimit.py  storage.py  supabase.py  tasks.py
aeon-protocol/backend-api/aeon_api/: config.py  logging_setup.py  main.py  middleware.py
aeon-protocol/backend-api/aeon_api/routers/: auth.py  health.py
aeon-protocol/backend-workers/: .env.example  pyproject.toml
aeon-protocol/backend-workers/aeon/: __init__.py  celery.py  config.py
aeon-protocol/backend-workers/aeon/tasks/: __init__.py  cleanup.py  crm.py  email.py  media.py
aeon-protocol/backend-workers/aeon/utils/: __init__.py  redis.py
aeon-protocol/backend-workers/aeon/workers/: __init__.py  main.py
aeon-protocol/backend-workers/aeon_workers/: app.py  config.py
aeon-protocol/frontend/: .env.example  .eslintrc.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
aeon-protocol/frontend/app/: globals.css  layout.tsx  page.tsx
aeon-protocol/frontend/app/(legal)/privacy/: page.tsx
aeon-protocol/frontend/app/(legal)/terms/: page.tsx
aeon-protocol/frontend/lib/: env.ts
aeon-protocol/infra/: docker-compose.yml
aeon-protocol/infra/nginx/: nginx.conf
aeon-protocol/supabase/: seed.sql
aeon-protocol/supabase/migrations/: 0001_init.sql
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/generate-v0/: route.ts
app/api/projects/: route.ts
app/api/projects/[id]/: route.ts
app/api/projects/[id]/messages/: route.ts
apps/web/: .huskyrc-note.txt  Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(app)/webgen/: VoicePrompt.tsx  page.tsx
apps/web/app/codegen/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/studios/: page.tsx
apps/web/components/bg/: node-background.tsx  three-node-network.tsx
apps/web/components/charts/: metrics-chart.tsx
apps/web/components/modules/: video-hub.tsx
apps/web/components/realtime/: job-events.tsx
apps/web/components/ui/: glass-card.tsx
apps/web/lib/: api.ts  brand.ts  motion.ts  theme-tokens.ts  utils.ts
components/: loading-screen.tsx  new-project-modal.tsx  project-sidebar.tsx
components/ai-elements/: agent-ide.tsx  build-loader.tsx  conversation.tsx  loader.tsx  message.tsx  prompt-input.tsx  suggestion.tsx  web-preview.tsx
components/ui/: textarea.tsx
deployment/: Dockerfile.api  Dockerfile.worker  PRODUCTION_CHECKLIST.md  deploy.sh  docker-compose.production.yml  entrypoint-api.sh  nginx.conf  prometheus.yml
deployment/backup/: db_backup.sh
deployment/systemd/: aeon-stack.service
docs/runbooks/: webgen.md
docs/specs/: webspec.v1.json
infra/: docker-compose.dev.yml
lib/: auth.ts  db.ts  utils.ts
lib/agents/: capabilities.ts  index.ts  orchestrator.ts  prompts.ts  swarm.ts  types.ts
lib/agents/constellation/: capabilities.ts  failover.ts  genetic.ts  index.ts  nexus.ts  postmortem.ts  prompts.ts  telemetry.ts  types.ts
prisma/: schema.prisma
public/: manifest.json
services/api/: alembic.ini  pytest.ini  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0002_agents_integrations_workflows.py  20250825_webgen.py
services/api/app/: auth.py  config.py  database.py  main.py  middleware.py  rate_limit.py  s3_client.py
services/api/app/database/: __init__.py  models.py  neon_db.py
services/api/app/llm/: client.py
services/api/app/routers/: README.md  __init__.py  jobs.py  media.py  metrics.py  realtime.py  web_enhance.py  webgen.py
services/api/migrations/sql/: 2025_08_25_webgen.sql
services/api/tests/: conftest.py  test_auth.py  test_health.py  test_health_config.py  test_job_lifecycle.py  test_media_jobs.py  test_rate_limit_key.py  test_webgen.py
services/worker/: coverage.xml  db.py  pyproject.toml  requirements.txt  runner.py  webgen.py  webgen_consumer.py  worker.py
services/worker/tests/: conftest.py  test_audio_task.py  test_image_task.py  test_video_task.py  test_webgen_consumer.py  test_worker_tasks.py
tests/smoke/: test_webgen.py
