[project]
name = "aeon-api"
version = "0.1.0"
description = "AEON Protocol Backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "gunicorn>=22.0.0",
  "pydantic>=2.8.0",
  "structlog>=24.1.0",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.0",
  "prometheus-client>=0.20.0",
  "sentry-sdk>=2.8.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.5",
  "pytest>=8.3.2",
  "anyio>=4.4.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]
ignore = []

