[project]
name = "aeon-api"
version = "0.1.0"
description = "AEON Protocol FastAPI service"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "gunicorn>=22.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.1.0",
  "sentry-sdk[fastapi]>=2.13.0",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "boto3>=1.35.0",
  "orjson>=3.10.0",
  "prometheus-client>=0.21.0",
  "pyjwt[crypto]>=2.9.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
