[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeon-workers"
version = "0.1.0"
description = "AEON Protocol Background Workers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "AEON Protocol", email = "dev@aeonprotocol.com"},
]
keywords = ["workers", "celery", "ai", "media-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "celery[redis]>=5.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "supabase>=2.0.0",
    "replicate>=0.20.0",
    "openai>=1.0.0",
    "elevenlabs>=0.2.0",
    "boto3>=1.34.0",
    "pillow>=10.0.0",
    "moviepy>=1.0.3",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "sentry-sdk>=1.38.0",
    "resend>=0.6.0",
    "python-telegram-bot>=20.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/aeon-protocol/aeon-protocol"
Documentation = "https://docs.aeonprotocol.com"
Repository = "https://github.com/aeon-protocol/aeon-protocol"
Issues = "https://github.com/aeon-protocol/aeon-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["aeon"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=aeon",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]